# uploadserver

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/api/v1/endpoints/: date.rs  mod.rs  root.rs
src/config/: mod.rs
